Added assetc browser, Added Scene creating/saving and loading

--- a/OpenTK2DGameEngine/settings.json
+++ b/OpenTK2DGameEngine/settings.json
@@ -1,1 +1,1 @@
-{"GridSize":{"X":32,"Y":32},"AssetZoomSize":2.088,"SceneCameraSpeedMultiplier":6.469}
+{"GridSize":{"X":32,"Y":32},"AssetZoomSize":1.419,"SceneCameraSpeedMultiplier":1.0,"lastOpenedScenePath":"Level01.scene"}
